--- a/main.html
+++ b/main.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
@@ -10,7 +9,44 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<form>
+  <label for="name">Name*</label><br>
+  <input type="text" id="#name" placeholder="name">
+ </br>
+  <label for="email">Email</label><br>
+  <input type="text" placeholder="email">
+</br>
+  <label for="gender">Gender</label><br>
+  <input type="radio" name="gender" >male
+  <input type="radio" name="gender">female
+</br>
+<label for="car">Car Brands</label><br>
+<select >
+    
+    <option>BMW</option>
+    <OPTION>AUDI</OPTION>
+    <OPTION>MERCEDES</OPTION>
+</select>
+</br>
 
+<label for="age">Age*</label><br>
+<input placeholder="age">
+<br>
+<label for="dob">DOB*</label><br>
+<input type="date">
+<br>
+<label for="phonenumber">phone number</label><br>
+<input type="tel" placeholder="910******9">
+<br>
+<label for="password">Password*</label><br>
+<input type="password" placeholder="password"><br>
+
+<lable for="checkbox">checkbox*</lable><br>
+<input type="checkbox" >
+<lable for="tos">I agree to the TOS</lable>
+<br>
+ <button type="submit">submit</button>
+ </form>
 </body>
 
 </html>
