--- a/main.html
+++ b/main.html
@@ -24,8 +24,8 @@
 <select >
     
     <option>BMW</option>
-    <OPTION>AUDI</OPTION>
-    <OPTION>MERCEDES</OPTION>
+    <OPTION>Audi</OPTION>
+    <OPTION>Mercedez</OPTION>
 </select>
 </br>
 
