--- a/main.html
+++ b/main.html
@@ -21,8 +21,7 @@
   <input type="radio" name="gender">female
 </br>
 <label for="car">Car Brands</label><br>
-<select >
-    
+<select type="text">
     <option>BMW</option>
     <OPTION>Audi</OPTION>
     <OPTION>Mercedez</OPTION>
